[package]
name = "rct"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false
authors = ["{{ authors }}"]
description = "{{description}}"
readme = "README.md"
repository = "{{repository}}"
license = "MIT"
keywords = ["template", "rust", "project"]
categories = ["development-tools"]

[dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "warn"
